tests/fixtures/invalid/list_bitnot.py
# Cannot use bitwise NOT on list
x: int = ~[1, 2, 3]
